syntax = "proto3";
package ciao.devices;

import "ciao/devices/device.proto";

// Service for managing devices
service DeviceService {
  // Get a device by ID
  rpc Get(GetRequest) returns (GetResponse);

  // List all devices with optional filters
  rpc List(ListRequest) returns (stream ListResponse);

  // Create a new device
  rpc Create(CreateRequest) returns (CreateResponse);

  // Update an existing device
  rpc Update(UpdateRequest) returns (UpdateResponse);

  // Delete a device
  rpc Delete(DeleteRequest) returns (DeleteResponse);

  // Get the configuration of a specified device
  rpc GetDeviceConfiguration(DeviceConfigurationRequest) returns (DeviceConfigurationResponse);
}

// Get Device
message GetRequest {
  string id = 1;
}

message GetResponse {
  Device device = 1;
}

// List Devices
message ListRequest {}

message ListResponse {
  repeated Device devices = 1;
}

// Create Device
message CreateRequest {
  Device device = 1;
}

message CreateResponse {
  Device device = 1;
}

// Update Device
message UpdateRequest {
  Device device = 1;
}

message UpdateResponse {
  Device device = 1;
}

// Delete Device
message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  string message = 1;
}

message DeviceConfigurationRequest {
  string external_id = 1;
}

message DeviceConfigurationResponse {
  Device device = 1;
}
